# llm_rag_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: embed_interface.h  llm_interface.h  rag_client.h
rag/: index.tsv
src/: embed_interface.cpp  llm_interface.cpp  main.cpp  rag_client.cpp
